# rec-models

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  README.md  main.py  pyproject.toml  requirements.txt
src/: config.py
src/data/: process.py
src/models/: __init__.py  base_model.py  lightgcn.py  loss.py  mf.py  registry.py  sasrec.py  utils.py
src/process/: processor.py
src/train/: dataset.py  train_dataset.py  trainer.py  utils.py
